build_err.log
   Compiling cell v0.1.0 (I:\GitProjects\Cell)
warning: unused import: `std::path::Path`
 --> src\loader.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `anyhow`
 --> src\compiler\mod.rs:1:22
  |
1 | use anyhow::{Result, anyhow};
  |                      ^^^^^^

warning: unused import: `MemArg`
 --> src\compiler\mod.rs:3:85
  |
3 |     CodeSection, ExportKind, ExportSection, Function, FunctionSection, Instruction, MemArg, MemoryType,
  |                                                                                     ^^^^^^

warning: unused imports: `CellRef`, `Direction`, `FunctionDef`, and `Op`
 --> src\compiler\mod.rs:8:33
  |
8 | use crate::parser::{Expr, Stmt, Op, Literal, CellRef, CellContent, FunctionDef, Direction, Block};
  |                                 ^^           ^^^^^^^               ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `FunctionDef`
 --> src\compiler\types.rs:2:34
  |
2 | use crate::parser::{CellContent, FunctionDef};
  |                                  ^^^^^^^^^^^

warning: unused variable: `idx`
  --> src\compiler\mod.rs:37:17
   |
37 |         let mut idx = 0;
   |                 ^^^ help: if this is intentional, prefix it with an underscore: `_idx`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\compiler\mod.rs:36:13
   |
36 |         let mut globals = HashMap::new();
   |             ----^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\compiler\mod.rs:37:13
   |
37 |         let mut idx = 0;
   |             ----^^^
   |             |
   |             help: remove this `mut`

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
  --> src\compiler\mod.rs:64:17
   |
62 |         for cell in &self.parsed_cells {
   |                     ------------------
   |                     |
   |                     immutable borrow occurs here
   |                     immutable borrow later used here
63 |             if let CellContent::Code(f) = &cell.content {
64 |                 self.scan_block_strings(&f.body);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here

warning: unused variable: `data_cells`
   --> src\compiler\mod.rs:141:13
    |
141 |         let data_cells: Vec<_> = self.parsed_cells.iter()
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_data_cells`

For more information about this error, try `rustc --explain E0502`.
warning: `cell` (bin "cell") generated 9 warnings
error: could not compile `cell` (bin "cell") due to 1 previous error; 9 warnings emitted
